--- a/product/productDetail.css
+++ b/product/productDetail.css
@@ -72,7 +72,9 @@
   font-size: 10px;
   cursor: pointer;
 }
-.totalPrice{padding: 30px 0;
+.cart_price{width: 85px;}
+.totalPrice{
+  padding: 30px 0;
   width: 100%;
   font-size:13px;
   font-weight: bold;
